<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowToTrainActivity">

    <Button
        android:id="@+id/continue_button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/weiter"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/Text_HowToTrain"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Text_HowToTrain" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/continue_button5"
        app:layout_constraintStart_toStartOf="@+id/continue_button5" />

    <TextView
        android:id="@+id/Text_HowToTrain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/wie_moechtest_du_trainieren"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/bodyweight_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mit_eigenem_koerpergewicht"
        app:layout_constraintEnd_toEndOf="@+id/Text_HowToTrain"
        app:layout_constraintStart_toStartOf="@+id/Text_HowToTrain"
        app:layout_constraintTop_toBottomOf="@+id/Text_HowToTrain" />

    <Button
        android:id="@+id/runner_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/mit_laufen"
        app:layout_constraintEnd_toEndOf="@+id/bodyweight_button"
        app:layout_constraintStart_toStartOf="@+id/bodyweight_button"
        app:layout_constraintTop_toBottomOf="@+id/bodyweight_button" />

    <Button
        android:id="@+id/weight_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/mit_gewichten"
        app:layout_constraintEnd_toEndOf="@+id/runner_button"
        app:layout_constraintStart_toStartOf="@+id/runner_button"
        app:layout_constraintTop_toBottomOf="@+id/runner_button" />

</androidx.constraintlayout.widget.ConstraintLayout>